--- a/src/main/application.properties
+++ b/src/main/application.properties
@@ -1,5 +1,4 @@
 
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_todo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -8,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-# spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgresql
