--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgresql
