--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgresql
+spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -18,3 +18,6 @@ spring.jpa.open-in-view=false
 
 jwt_secret=fsdfs#5345ggd*465sdf*gs*df
 jwt_expires=3600
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/index.html
