--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_todo
+# spring.datasource.url= ${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_turismo
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
-spring.sql.init.mode=always
-spring.sql.init.platform=postgresql
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgresql
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -21,3 +23,5 @@ jwt_expires=3600
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/index.html
+
+server.servlet.context-path=/api-java
